Changes in version 2.16.1

 * Don't default to type constructors for out-of-scope names (#253 and
   #375)

 * Fix Hoogle display of constructors (#361)

 * Fully qualify names in Hoogle instances output (#263)

 * Output method documentation in Hoogle backend (#259)

 * Don't print instance safety information in Hoogle (#168)


Changes in version 2.16.0

 * Experimental collapsible header support (#335)

 * Add support for markdown links and images

 * Allow an optional colon after the closing bracket of definition lists.
   This is to disambiguate them from markdown links and will be require with a
   future release.

 * Fix re-exports of built-in type families (#310)

 * Fix parsing of infix identifiers such as ``elem``.

 * Print missing docs by default and add --no-print-missing-docs

 * parser: now parses out some meta data too, breaking the API

 * parser: markdown syntax for images and URLs is now accepted:
   <<foo>> style for images and <foo bar> style for links is now
   considered deprecated. <foo> for links is still OK.

 * parser: add support for @since element: this is paragraph-level
   element of the form ‘@since x.y.z’ where x.y.z is the version
   number. The way it is rendered is subject to change.

 * properly render package ID (not package key) in index (#329)

 * links to source location of class instance definitions

 * Fix code blocks in presence of Windows line endings

 * Deal better with long synopsis lines (#151)

Changes in version 2.15.0

 * Always read in prologue files as UTF8 (#286 and Cabal #1721)

 * parser: don't wrap headers in DocParagraph (#307)

 * parser: don't mangle append order for nested lists (pandoc #1346)

 * parser: preserve list ordering in certain scenarios (#313)

 * parser: update the attoparsec version used internally giving slight
   parsing performance boost.

 * Move development to be against latest GHC release and not GHC HEAD.

 * Further split up the package to separate the executable from the